Simplify class